feat: add support for 2-year tournament data and enhance loading state management in deck archetype modal

--- a/src/app/modules/deck-archetypes/deck-archetype-modal/deck-archetype-modal.component.html
+++ b/src/app/modules/deck-archetypes/deck-archetype-modal/deck-archetype-modal.component.html
@@ -85,6 +85,11 @@
   </div>
   <div class="modal-footer">
     <button class="btn btn-secondary" (click)="cancel()">{{ 'shared.cancel' | transloco }}</button>
-    <button class="btn btn-primary" (click)="save()">{{ 'shared.apply' | transloco }}</button>
+    <button class="btn btn-primary" (click)="save()" [disabled]="loading">
+      @if (loading) {
+      <span class="spinner-border spinner-border-sm me-2" role="status"></span>
+      }
+      {{ 'shared.apply' | transloco }}
+    </button>
   </div>
 </ng-container>
