feat: update navigation and links to reflect new Metagame section and improve UI consistency

--- a/src/app/modules/home/home-meta-game/home-meta-game.component.html
+++ b/src/app/modules/home/home-meta-game/home-meta-game.component.html
@@ -10,7 +10,7 @@
     <app-deck-archetypes [limit]="6"></app-deck-archetypes>
   </div>
   <div class="card-footer white">
-    <a class="btn btn-success btn-rounded btn-lg" routerLink="/archetypes" role="button">
+    <a class="btn btn-success btn-rounded btn-lg" routerLink="/metagame" role="button">
       {{ t('see_more') }}
     </a>
   </div>
