--- a/src/app/modules/deck-metagame/deck-metagame-modal/deck-metagame-modal.component.html
+++ b/src/app/modules/deck-metagame/deck-metagame-modal/deck-metagame-modal.component.html
@@ -1,4 +1,4 @@
-<ng-container *transloco="let t; prefix: 'deck_archetype'">
+<ng-container *transloco="let t; prefix: 'deck_metagame'">
   <div class="modal-header">
     <h5 class="modal-title">{{ form.value.id ? t('edit') : t('create') }}</h5>
     <form [formGroup]="form">
