--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -172,8 +172,8 @@
 
   <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="6580167823" adFormat="auto" fullWidthResponsive="true" />
 
-  <!-- Top Archetypes (homepage preview) -->
-  <app-home-meta-game class="mt-3" />
+  <!-- Top Metagame (homepage preview) -->
+  <app-home-metagame class="mt-3" />
 
   <!-- Popular and Newest Decks -->
   <div class="row mt-3">
