--- a/src/app/modules/home/home-metagame/home-metagame.component.scss
+++ b/src/app/modules/home/home-metagame/home-metagame.component.scss
@@ -68,6 +68,7 @@
     background: var(--bs-card-bg);
     border-top: 1px solid rgba(0, 0, 0, 0.05);
     padding: 1.5rem;
+    padding-top: 0;
     text-align: center;
 
     .btn {
@@ -119,6 +120,7 @@
 
     .card-footer {
       padding: 1rem;
+      padding-top: 0;
 
       .btn {
         padding: 0.5rem 1.5rem;
