--- a/src/app/modules/home/home-section/home-section.component.scss
+++ b/src/app/modules/home/home-section/home-section.component.scss
@@ -67,6 +67,7 @@
     background: var(--bs-card-bg);
     border-top: 1px solid rgba(0, 0, 0, 0.05);
     padding: 1.5rem;
+    padding-top: 0;
     text-align: center;
 
     .btn {
@@ -118,6 +119,7 @@
 
     .card-footer {
       padding: 1rem;
+      padding-top: 0;
 
       .btn {
         padding: 0.5rem 1.5rem;
