--- a/src/app/modules/home/home-metagame/home-metagame.component.scss
+++ b/src/app/modules/home/home-metagame/home-metagame.component.scss
@@ -35,6 +35,7 @@
         rgba(255, 255, 255, 0.1) 0%,
         rgba(255, 255, 255, 0) 100%
       );
+      pointer-events: none;
     }
 
     h5 {
