--- a/src/app/modules/deck-shared/card-info/card-info.component.scss
+++ b/src/app/modules/deck-shared/card-info/card-info.component.scss
@@ -47,3 +47,13 @@
     transition: height 0.3s ease-in-out;
   }
 }
+
+.timeline-dot {
+  width: 16px;
+  height: 16px;
+}
+
+.timeline-line {
+  width: 2px;
+  margin-bottom: -15px;
+}
