--- a/src/app/shared/components/notification-list/notification-list.component.html
+++ b/src/app/shared/components/notification-list/notification-list.component.html
@@ -26,7 +26,7 @@
       </div>
     </a>
     }
-    @if(notification.type === 'GLOBAL' || notification.type === 'COMMENT'){
+    @if(notification.type === 'GLOBAL'|| notification.type === 'DECK' || notification.type === 'COMMENT'){
     <a class="text-decoration-none text-black notification-list" [ngClass]="{
       'notification-list--unread': !notification.read
     }" [routerLink]="notification.link" (click)="!notification.read ? read(notification.id): offcanvas.close()">
