--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -54,22 +54,17 @@
             </a>
           </div>
         </li>
-
-        <li ngbDropdown class="nav-item" display="dynamic">
-          <span class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdownCards" role="button"
-            aria-expanded="false">
-            {{ t('cards') }}
-          </span>
-          <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="navbarDropdownCards">
-            <a ngbDropdownItem routerLink="/cards/crypt" [routerLinkActive]="['active']"
-              [routerLinkActiveOptions]="{exact: true}" (click)="isCollapsed = true">
-              <i class="bi bi-file-person"></i> {{ t('crypt') }}
-            </a>
-            <a ngbDropdownItem routerLink="/cards/library" [routerLinkActive]="['active']"
-              [routerLinkActiveOptions]="{exact: true}" (click)="isCollapsed = true">
-              <i class="bi bi-file-richtext"></i> {{ t('library') }}
-            </a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/cards/crypt" [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{exact: true}" (click)="isCollapsed = true">
+            {{ t('crypt') }}
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/cards/library" [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{exact: true}" (click)="isCollapsed = true">
+            {{ t('library') }}
+          </a>
         </li>
         <li class="nav-item" *isLogged="true">
           <a class="nav-link" routerLink="/decks/builder" [routerLinkActive]="['active']"
