feat: add username link to comments and update ApiComment interface

--- a/src/app/modules/comments/comment/comment.component.html
+++ b/src/app/modules/comments/comment/comment.component.html
@@ -5,7 +5,10 @@
     <div class="d-flex justify-content-between align-items-center">
       <div class="d-flex flex-row align-items-center">
         <span class="me-2" [ngClass]="{ 'fw-bold' : comment.createdByCurrentUser}">
-          {{ comment.fullName }}
+          <a class="text-decoration-none d-inline-flex align-items-center fw-bold"
+            [routerLink]="'/user/' + comment.username">
+            {{ comment.fullName }}
+          </a>
           @if (comment.createdBySupporter) {
           <i class="bi bi-patch-check-fill text-primary" [title]="'shared.supporter' | transloco"></i>
           }
