feat: allow users to set a custom profile image URL and update related components

--- a/src/app/modules/user/profile/profile.component.html
+++ b/src/app/modules/user/profile/profile.component.html
@@ -35,6 +35,13 @@
           }
         </div>
       </div>
+      <div class="row mt-2">
+        <div class="col-md-12">
+          <label class="labels">{{ t('profile_image') }}</label>
+          <input type="text" class="form-control" placeholder="https://www.example.com/avatar.jpg"
+            formControlName="profileImage" autocomplete="photo">
+        </div>
+      </div>
       <div class="row mb-4 mt-2">
         <div class="col-md-6">
           <div class="form-group">
