--- a/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
+++ b/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
@@ -144,6 +144,8 @@
       (titleChange)="onChangeTitleFilter($event)" [(sect)]="sect" (sectChange)="onChangeSectFilter($event)"
       [(path)]="path" (pathChange)="onChangePathFilter($event)" [(taints)]="taints"
       (taintsChange)="onChangeTaintsFilter($event)" [(cardText)]="cardText"
-      (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)" />
+      (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)"
+      [predefinedLimitedFormat]="predefinedLimitedFormat"
+      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" />
   </ng-template>
 </ng-container>
