--- a/src/app/modules/deck-builder/library-builder-filter/library-builder-filter.component.html
+++ b/src/app/modules/deck-builder/library-builder-filter/library-builder-filter.component.html
@@ -35,6 +35,19 @@
   <div id="clans" class="row g-1">
     <app-clan-filter [(clans)]="clans" (clansChange)="onChangeClanFilter($event)" [showNotRequired]="true" />
   </div>
+  @if ( limitedFormat === undefined ) {
+  <div class="row g-1 form-floating mt-2">
+    <select class="form-select" id="limitedFormatSelect" [formControl]="predefinedLimitedFormatControl">
+      <option selected></option>
+      @for (format of (predefinedLimitedFormats$ | async); track format.id) {
+      <option [value]="format.id">
+        {{ format.name }}
+      </option>
+      }
+    </select>
+    <label for="limitedFormatSelect">{{ t('limited_format') }}</label>
+  </div>
+  }
   <div class="row g-1 form-floating mt-2">
     <select class="form-select" id="set" [formControl]="setControl">
       <option selected></option>
