feat(i18n): add Artist filter to Crypt and Library sections with localization support

--- a/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
+++ b/src/app/modules/deck-builder/crypt-builder/crypt-builder.component.html
@@ -140,6 +140,7 @@
       (taintsChange)="onChangeTaintsFilter($event)" [(cardText)]="cardText"
       (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)"
       [predefinedLimitedFormat]="predefinedLimitedFormat"
-      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" />
+      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" [artist]="artist"
+      (artistChange)="onChangeArtistFilter($event)" />
   </ng-template>
 </ng-container>
