--- a/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
+++ b/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
@@ -146,6 +146,7 @@
       (taintsChange)="onChangeTaintsFilter($event)" [(cardText)]="cardText"
       (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)"
       [predefinedLimitedFormat]="predefinedLimitedFormat"
-      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" />
+      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" [artist]="artist"
+      (artistChange)="onChangeArtistFilter($event)" />
   </ng-template>
 </ng-container>
