--- a/src/app/modules/deck-builder/library-section/library-section.component.html
+++ b/src/app/modules/deck-builder/library-section/library-section.component.html
@@ -137,6 +137,7 @@
       [(title)]="title" (titleChange)="onChangeTitleFilter($event)" [(cardText)]="cardText"
       (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)"
       [predefinedLimitedFormat]="predefinedLimitedFormat"
-      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" />
+      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" [artist]="artist"
+      (artistChange)="onChangeArtistFilter($event)" />
   </ng-template>
 </ng-container>
